# GEMCODEX

./: .env.sample  .gitignore  backup_utils.py  database.py  docker-compose.yml  event_bus.py  main.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20240320_0001_initial.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  auth.py  legacy.py  parts.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  colleague.py  counterparty.py  equipment.py  knife.py  mixins.py  order.py  part.py  replacement.py  setting.py  task.py  user.py
backend/app/repositories/: base.py  user.py
backend/app/schemas/: __init__.py  auth.py  common.py  parts.py
backend/tests/: test_health.py
data/: app.db
deploy/: nginx.conf
docs/: API_EXAMPLES.md  ASSUMPTIONS.md  DOMAIN.md  MIGRATION.md  README.md
logs/: migration_report.md
migration/: transfer.py
tests/: test_backup_utils.py  test_database_errors.py
ui/: attach_part_dialog.py  category_manager_dialog.py  colleagues_manager_dialog.py  counterparties_tab.py  counterparty_dialog.py  dashboard_tab.py  edit_attached_part_dialog.py  edit_replacement_dialog.py  equipment_category_manager_dialog.py  equipment_dialog.py  equipment_tab.py  knife_sharpen_history_dialog.py  knives_tab.py  log_tab.py  manual_part_dialog.py  order_dialog.py  orders_tab.py  part_dialog.py  part_selection_dialog.py  periodic_task_dialog.py  replacement_dialog.py  replacement_history_tab.py  (+6 more)
(+21 files in other folders)
