[tool.poetry]
name = "gemcodex-backend"
version = "0.1.0"
description = "FastAPI backend for GEMCODEX"
authors = ["GEMCODEX Team <team@example.com>"]
license = "Proprietary"
readme = "../docs/README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
pydantic = "^2.6.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
psycopg = {extras = ["binary"], version = "^3.1.16"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-dotenv = "^1.0.1"
alembic = "^1.13.1"
tenacity = "^8.2.3"
redis = "^5.0.1"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
ruff = "^0.2.0"
black = "^24.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
